force-app/main/default/objects/Response_Attribute__c/Response_Attribute__c.object-meta.xml
<CustomObject>
    <label>Response Attribute</label>
    <nameField>
        <label>Response Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Response Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>