force-app/main/default/objects/Response_Attribute__c/fields/Historical_Id__c.field-meta.xml
<CustomField>
    <fullName>Historical_Id__c</fullName>
    <externalId>true</externalId>
    <label>Historical Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>