force-app/main/default/objects/Response_Attribute__c/fields/preferred_Not_preferred__c.field-meta.xml
<CustomField>
    <fullName>preferred_Not_preferred__c</fullName>
    <label>preferred/Not preferred</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Non Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>