force-app/main/default/objects/Response_Attribute__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <label>QuestionId</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Response Attributes</relationshipLabel>
    <relationshipName>Response_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>