force-app/main/default/objects/Response_Attribute__c/fields/Response_value__c.field-meta.xml
<CustomField>
    <fullName>Response_value__c</fullName>
    <label>Response value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>