force-app/main/default/objects/Response_Attribute__c/fields/Upload_Required__c.field-meta.xml
<CustomField>
    <fullName>Upload_Required__c</fullName>
    <label>Upload Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>