force-app/main/default/objects/Response_Attribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>